--- a/html/legal-notice.html
+++ b/html/legal-notice.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join - Legals</title>
+    <title>Join - Legal Notice</title>
 </head>
 <body>
-    
+    <h1>Legal Notice</h1>
 </body>
 </html>
