added fetch contacts function

--- a/html/legal-notice.html
+++ b/html/legal-notice.html
@@ -14,28 +14,16 @@
           <img src="../assets/img/join-logo.svg" alt="" />
         </div>
         <div class="menu-buttons">
-          <button
-            onmouseover="changeImage(this, '../assets/img/summary-icon-hover.svg')"
-            onmouseout="changeImage(this, '../assets/img/summary-icon.svg')"
-          >
+          <button>
             <img src="../assets/img/summary-icon.svg" alt="" />Summary
           </button>
-          <button
-            onmouseover="changeImage(this, '../assets/img/addTask-icon-hover.svg')"
-            onmouseout="changeImage(this, '../assets/img/addTask-icon.svg')"
-          >
+          <button>
             <img src="../assets/img/addTask-icon.svg" alt="" />Add Task
           </button>
-          <button
-            onmouseover="changeImage(this, '../assets/img/board-icon-hover.svg')"
-            onmouseout="changeImage(this, '../assets/img/board-icon.svg')"
-          >
+          <button>
             <img src="../assets/img/board-icon.svg" alt="" />Board
           </button>
-          <button
-            onmouseover="changeImage(this, '../assets/img/contacts-icon-hover.svg')"
-            onmouseout="changeImage(this, '../assets/img/contacts-icon.svg')"
-          >
+          <button>
             <img src="../assets/img/contacts-icon.svg" alt="" />Contacts
           </button>
         </div>
