--- a/html/add-task.html
+++ b/html/add-task.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join - Add Task</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="shortcut icon" href="../assets/img/join-logo.svg" type="image/x-icon" />
+    <title>Join | Add Task</title>
+
+    <link rel="stylesheet" href="../../style.css" />
+    <script src="../../js/render.js"></script>
+  </head>
+  <body
+    onload='loadTemplate("menu-content", "../assets/templates/menu-template.html"), loadTemplate("header-content", "../assets/templates/header-template.html")'
+  >
+    <div class="container">
+      <aside>
+        <div id="menu-content" class="menu-content"></div>
+      </aside>
+      <div class="main-content">
+        <header id="header-content" class="header"></header>
+        <main class="main">
+          <!-- Hier den Inhalt der Seite einfügen! -->
+        </main>
+      </div>
+    </div>
+  </body>
 </html>
