--- a/html/legal-notice.html
+++ b/html/legal-notice.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <link rel="shortcut icon" href="../assets/img/join-logo.svg" type="image/x-icon" />
+    <title>Join | Legal Notice</title>
+
     <link rel="stylesheet" href="../../style.css" />
     <script src="../../js/render.js"></script>
   </head>
