startet to add highlight active link - not working yet

--- a/html/board.html
+++ b/html/board.html
@@ -8,10 +8,11 @@
     <title>Join | Board</title>
 
     <link rel="stylesheet" href="../../style.css" />
+    <script src="../script.js"></script>
     <script src="../../js/render.js"></script>
   </head>
   <body
-    onload='loadTemplate("menu-content", "../assets/templates/menu-template.html"), loadTemplate("header-content", "../assets/templates/header-template.html")'
+    onload='init()'
   >
     <div class="container">
       <aside>
