added highlight active link

--- a/html/add-task.html
+++ b/html/add-task.html
@@ -12,7 +12,7 @@
     <script src="../../js/render.js"></script>
   </head>
   <body
-    onload='init()'
+    onload='init("addTask", "menu")'
   >
     <div class="container">
       <aside>
