--- a/html/board.html
+++ b/html/board.html
@@ -12,7 +12,7 @@
     <script src="../../js/render.js"></script>
   </head>
   <body
-    onload='init()'
+    onload='init("board", "menu")'
   >
     <div class="container">
       <aside>
