--- a/html/legal-notice.html
+++ b/html/legal-notice.html
@@ -12,7 +12,7 @@
     <script src="../../js/render.js"></script>
   </head>
   <body
-    onload='init()'
+    onload='init("legalNotice", "legals")'
   >
     <div class="container">
       <aside>
