--- a/html/help.html
+++ b/html/help.html
@@ -11,9 +11,7 @@
     <script src="../script.js"></script>
     <script src="../../js/render.js"></script>
   </head>
-  <body
-    onload='init()'
-  >
+  <body onload='init()'>
     <div class="container">
       <aside>
         <div id="menu-content" class="menu-content"></div>
