--- a/js/contacts.html
+++ b/js/contacts.html
@@ -25,7 +25,15 @@
         <main class="main">
           <!-- Hier den Inhalt der Seite einfügen! -->
           <div class="contacts-list">
+            
+
             <div id="alphabet-list-container" class="alphabet-list-container">
+
+              <div class="add-contact-button">
+                <div>Add new contact</div>
+                <div><img src="../assets/img/person_add.svg" alt=""></div> 
+              </div>
+              
               <div id="alphabet-list-a" class="alphabet-list d-non">
                 <div class="letter">A</div>
                 <div class="seperation-line-container">
