--- a/js/contacts.html
+++ b/js/contacts.html
@@ -12,7 +12,7 @@
     <script src="../../js/render.js"></script>
   </head>
   <body
-  onload='init()'
+  onload='init("contacts", "menu")'
   >
     <div class="container">
       <aside>
