add contact button

--- a/js/contacts.html
+++ b/js/contacts.html
@@ -15,7 +15,7 @@
     <script src="../script.js"></script>
     <script src="../../js/render.js"></script>
   </head>
-  <body onload="init()">
+ <body onload='init("contacts", "menu")'>
     <div class="container">
       <aside>
         <div id="menu-content" class="menu-content"></div>
