updated style.css and add-contact.html

--- a/html/add-contact.html
+++ b/html/add-contact.html
@@ -11,7 +11,7 @@
   <div class="container container-contact">
     <aside>
       <div id="menu-content" class="menu-content content-add-contact"></div>
-      <img src="../assets/img/join-logo.svg" alt="">
+      <img class="add-contact-aside-img" src="../assets/img/join-logo.svg" alt="">
       <h2>Add contact</h2>
       <p>Tasks are better with a team!</p>
     </aside>
