updated padding legal notice

--- a/html/legal-notice.html
+++ b/html/legal-notice.html
@@ -20,7 +20,7 @@
       </aside>
       <div class="main-content">
         <header id="header-content" class="header"></header>
-        <main class="main">
+        <main class="main legals-padding">
           <div class="legals-header">
             <h1>Legal Notice</h1>
             <button><img src="../assets/img/arrow-left.svg" alt="" /></button>
