updated style for main class

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -23,7 +23,7 @@
       </aside>
       <div class="main-content">
         <header id="header-content" class="header"></header>
-        <main class="main">
+        <main class="main contact-main">
           <!-- Hier den Inhalt der Seite einfügen! -->
           <div class="contacts-list">
             
