started work on board and updated contacts

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -31,7 +31,7 @@
 
             <div id="alphabet-list-container" class="alphabet-list-container">
 
-              <div onclick="addContact()" class="add-contact-button">
+              <div onclick="addContact()" class="add-contact-button button-hover-light-blue-background">
                 <div>Add new contact</div>
                 <div><img src="../assets/img/person_add.svg" alt=""></div> 
               </div>
