--- a/html/board.html
+++ b/html/board.html
@@ -4,24 +4,81 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="../assets/img/join-logo.svg" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="../assets/img/join-logo.svg"
+      type="image/x-icon"
+    />
     <title>Join | Board</title>
 
-    <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../styles/board.css" />
+    <link rel="stylesheet" href="../styles/dialog.css" />
     <script src="../script.js"></script>
     <script src="../../js/render.js"></script>
   </head>
-  <body
-    onload='init("board", "menu")'
-  >
+  <body onload='init("board", "menu")'>
     <div class="container">
       <aside>
         <div id="menu-content" class="menu-content"></div>
       </aside>
       <div class="main-content">
         <header id="header-content" class="header"></header>
-        <main class="main">
-          <!-- Hier den Inhalt der Seite einfügen! -->
+        <main class="main board-padding">
+          <div class="board-header">
+            <h1>Board</h1>
+            <div class="board-header-utilities">
+              <form class="board-search-form">
+                <input
+                class="board-search-input"
+                type="text"
+                placeholder="Find Task"
+              />
+              <button class="board-search-button">
+                <img src="../assets/img/search-icon.svg" alt="">
+              </button>  
+              </form>
+              <button class="board-button-add-task button-hover-light-blue-background">
+                Add task
+                <img src="../assets/img/add-icon.svg" alt="" />
+              </button>
+            </div>
+          </div>
+          <div class="board-content">
+            <div class="board-list">
+              <div class="board-list-header">
+                <span>To do</span>
+                <button class="btn-board-add-task button-hover-light-blue-svg" onclick="addTask()">
+                  <img src="../assets/img/plus-icon.svg" alt="+" />
+                </button>
+              </div>
+              <div id="toDo" class="board-list-content"></div>
+            </div>
+            <div class="board-list">
+              <div class="board-list-header">
+                <span>In progress</span>
+                <button class="btn-board-add-task button-hover-light-blue-svg" onclick="addTask()">
+                  <img src="../assets/img/plus-icon.svg" alt="+" />
+                </button>
+              </div>
+              <div id="inProgress" class="board-list-content"></div>
+            </div>
+            <div class="board-list">
+              <div class="board-list-header">
+                <span>Await feedback</span>
+                <button class="btn-board-add-task button-hover-light-blue-svg" onclick="addTask()">
+                  <img src="../assets/img/plus-icon.svg" alt="+" />
+                </button>
+              </div>
+              <div id="awaitFeedback" class="board-list-content"></div>
+            </div>
+            <div class="board-list">
+              <div class="board-list-header">
+                <span>Done</span>
+              </div>
+              <div id="done" class="board-list-content"></div>
+            </div>
+          </div>
         </main>
       </div>
     </div>
