--- a/html/board.html
+++ b/html/board.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="../styles/board.css" />
     <link rel="stylesheet" href="../styles/dialog.css" />
     <script src="../script.js"></script>
-    <script src="../../js/render.js"></script>
+    <script src="../js/board.js"></script>
+    <script src="../js/render.js"></script>
+    <script src="../js/templates.js"></script>
   </head>
   <body onload='init("board", "menu")'>
     <div class="container">
@@ -57,9 +59,7 @@
                   <img src="../assets/img/plus-icon.svg" alt="+" />
                 </button>
               </div>
-              <div id="toDo" class="board-list-content">
-                <div class="board-no-task">No tasks To do</div>
-              </div>
+              <div id="toDo" class="board-list-content"></div>
             </div>
             <div class="board-list">
               <div class="board-list-header">
@@ -71,41 +71,7 @@
                   <img src="../assets/img/plus-icon.svg" alt="+" />
                 </button>
               </div>
-              <div id="inProgress" class="board-list-content">
-                <!-- Begin task template -->
-                <div class="board-task">
-                  <div class="board-task-category">
-                    <div class="board-task-label label-user-story">
-                      User Story
-                    </div>
-                  </div>
-                  <div class="board-task-text">
-                    <div class="board-task-title">
-                      Kochwelt Page & Recipe Recommender
-                    </div>
-                    <div class="board-task-description">
-                      Build start page with recipe recommendation...
-                    </div>
-                  </div>
-                  <div class="board-task-subtasks">
-                    <div class="subtasks-progress-bar">
-                      <div class="subtasks-progress"></div>
-                    </div>
-                    <span>1/2 Subtasks</span>
-                  </div>
-                  <div class="board-task-meta">
-                    <div id="boardTaskContacts" class="board-task-contacts">
-                      <img class="board-task-profile-batch" src="../assets/img/temp-contact-dummy.svg" alt="">
-                      <img class="board-task-profile-batch" src="../assets/img/temp-contact-dummy.svg" alt="">
-                      <img class="board-task-profile-batch" src="../assets/img/temp-contact-dummy.svg" alt="">
-                    </div>
-                    <div class="board-task-priority">
-                      <img src="../assets/img/prio-media.svg" alt="">
-                    </div>
-                  </div>
-                </div>
-                <!-- End task template -->
-              </div>
+              <div id="inProgress" class="board-list-content"></div>
             </div>
             <div class="board-list">
               <div class="board-list-header">
@@ -117,114 +83,13 @@
                   <img src="../assets/img/plus-icon.svg" alt="+" />
                 </button>
               </div>
-              <div id="awaitFeedback" class="board-list-content">
-                <!-- Begin task template -->
-                <div class="board-task">
-                  <div class="board-task-category">
-                    <div class="board-task-label label-technical-task">
-                      Technical Task
-                    </div>
-                  </div>
-                  <div class="board-task-text">
-                    <div class="board-task-title">
-                      Kochwelt Page & Recipe Recommender
-                    </div>
-                    <div class="board-task-description">
-                      Build start page with recipe recommendation...
-                    </div>
-                  </div>
-                  <!-- <div class="board-task-subtasks">
-                    <div class="subtasks-progress-bar">
-                      <div class="subtasks-progress"></div>
-                    </div>
-                    <span>1/2 Subtasks</span>
-                  </div> -->
-                  <div class="board-task-meta">
-                    <div id="boardTaskContacts" class="board-task-contacts">
-                      <img class="board-task-profile-batch" src="../assets/img/temp-contact-dummy.svg" alt="">
-                      <img class="board-task-profile-batch" src="../assets/img/temp-contact-dummy.svg" alt="">
-                      <img class="board-task-profile-batch" src="../assets/img/temp-contact-dummy.svg" alt="">
-                    </div>
-                    <div class="board-task-priority">
-                      <img src="../assets/img/prio-low.svg" alt="">
-                    </div>
-                  </div>
-                </div>
-                <!-- End task template -->
-                 <!-- Begin task template -->
-                <div class="board-task">
-                  <div class="board-task-category">
-                    <div class="board-task-label label-user-story">
-                      User Story
-                    </div>
-                  </div>
-                  <div class="board-task-text">
-                    <div class="board-task-title">
-                      Kochwelt Page & Recipe Recommender
-                    </div>
-                    <div class="board-task-description">
-                      Build start page with recipe recommendation...
-                    </div>
-                  </div>
-                  <div class="board-task-subtasks">
-                    <div class="subtasks-progress-bar">
-                      <div class="subtasks-progress"></div>
-                    </div>
-                    <span>1/2 Subtasks</span>
-                  </div>
-                  <div class="board-task-meta">
-                    <div id="boardTaskContacts" class="board-task-contacts">
-                      <img class="board-task-profile-batch" src="../assets/img/temp-contact-dummy.svg" alt="">
-                      <img class="board-task-profile-batch" src="../assets/img/temp-contact-dummy.svg" alt="">
-                      <img class="board-task-profile-batch" src="../assets/img/temp-contact-dummy.svg" alt="">
-                    </div>
-                    <div class="board-task-priority">
-                      <img src="../assets/img/prio-media.svg" alt="">
-                    </div>
-                  </div>
-                </div>
-                <!-- End task template -->
-              </div>
+              <div id="awaitFeedback" class="board-list-content"></div>
             </div>
             <div class="board-list">
               <div class="board-list-header">
                 <span>Done</span>
               </div>
-              <div id="done" class="board-list-content">
-                <!-- Begin task template -->
-                <div class="board-task">
-                  <div class="board-task-category">
-                    <div class="board-task-label label-technical-task">
-                      User Story
-                    </div>
-                  </div>
-                  <div class="board-task-text">
-                    <div class="board-task-title">
-                      Kochwelt Page & Recipe Recommender
-                    </div>
-                    <div class="board-task-description">
-                      Build start page with recipe recommendation...
-                    </div>
-                  </div>
-                  <div class="board-task-subtasks">
-                    <div class="subtasks-progress-bar">
-                      <div class="subtasks-progress"></div>
-                    </div>
-                    <span>1/2 Subtasks</span>
-                  </div>
-                  <div class="board-task-meta">
-                    <div id="boardTaskContacts" class="board-task-contacts">
-                      <img class="board-task-profile-batch" src="../assets/img/temp-contact-dummy.svg" alt="">
-                      <img class="board-task-profile-batch" src="../assets/img/temp-contact-dummy.svg" alt="">
-                      <img class="board-task-profile-batch" src="../assets/img/temp-contact-dummy.svg" alt="">
-                    </div>
-                    <div class="board-task-priority">
-                      <img src="../assets/img/prio-urgent.svg" alt="">
-                    </div>
-                  </div>
-                </div>
-                <!-- End task template -->
-              </div>
+              <div id="done" class="board-list-content"></div>
             </div>
           </div>
         </main>
