worked on render board function

--- a/html/board.html
+++ b/html/board.html
@@ -19,7 +19,7 @@
     <script src="../js/render.js"></script>
     <script src="../js/templates.js"></script>
   </head>
-  <body onload='init("board", "menu")'>
+  <body onload='loadBoard("board", "menu")'>
     <div class="container">
       <aside>
         <div id="menu-content" class="menu-content"></div>
