--- a/html/contacts.html
+++ b/html/contacts.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../style.css" />
     <script src="../script.js"></script>
     <script src="../js/contacts.js"></script>
-    <script src="../../js/render.js"></script>
+    <script src="../js/render.js"></script>
   </head>
  <body onload='init("contacts", "menu")'>
     <div id="overlay-placeholder"></div>
