--- a/html/contacts.html
+++ b/html/contacts.html
@@ -12,6 +12,7 @@
     <title>Join | Contacts</title>
     <link rel="stylesheet" href="../styles/dialog.css">
     <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../styles/contact.css">
     <script src="../script.js"></script>
     <script src="../js/contacts.js"></script>
     <script src="../js/render.js"></script>
