--- a/html/add-task.html
+++ b/html/add-task.html
@@ -8,6 +8,7 @@
     <title>Join | Add Task</title>
 
     <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../styles/add-task.css">
     <script src="../script.js"></script>
     <script src="../../js/render.js"></script>
   </head>
@@ -20,6 +21,51 @@
         <header id="header-content" class="header"></header>
         <main class="main">
           <!-- Hier den Inhalt der Seite einfügen! -->
+           <div class="add-task-header">Add Task</div>
+           <div class="add-task-form-container">
+            <form action="">
+              <div class="add-task-forms">
+                <div class="first-form">
+                  <label for="title">Title</label>
+                  <input type="text" id="title" placeholder="Enter a title" required>
+                  <label for="description">Description</label>
+                  <textarea name="description" id="description" placeholder="Enter a description"></textarea>
+                  <label for="assignment">Assigned to</label>
+                  <select name="assignment" id="assignment">
+                    <option value="" hidden>Select contacts to assign</option>
+                  </select>
+                </div>
+                <div class="seperation-line-task"></div>
+                <div class="second-form">
+                  <label for="due-date">Due Date</label>
+                  <input type="date" name="due-date" id="due-date">
+                  <label for="prio">Prio</label>
+                  <div id="prio">
+                    <input class="prio-button" type="button" name="low" id="low" value="low">
+                    <input class="prio-button" type="button" name="medium" id="medium" value="medium">
+                    <input class="prio-button" type="button" name="high" id="high" value="high">
+                  </div>
+                  <label for="category">Category</label>
+                  <select name="category" id="category">
+                    <option value="" hidden>Select task Category</option>
+                    <option value="technical-task">Technical Task</option>
+                    <option value="user-story">User Story</option>
+                  </select>
+                  <label for="subtasks">Subtasks</label>
+                  <input type="text">
+                </div>
+              </div>
+
+                <div>
+                  <div>This field is required</div>
+                  <div>
+                    <button>Clear X</button>
+                    <button>Create a Task ✓</button>
+                  </div>
+                </div>
+
+            </form>
+           </div>
         </main>
       </div>
     </div>
