--- a/html/board.html
+++ b/html/board.html
@@ -118,92 +118,8 @@
               ></div>
             </div>
           </div>
-          <div id="taskDetailDialogContainer">
-            <div class="overlay">
-              <div class="board-task-dialog">
-                <div class="board-task-dialog-header">
-                  <div class="board-task-dialog-label label-technical-task">
-                    <!-- Einfügen: ${getTaskLabel(taskId)} -->
-                    Technical Task<!--Einfügen ${firstLetterUpperCase(task.category)} -->
-                  </div>
-                  <button
-                    onclick="toggleDisplayNone('taskDetailDialogContainer')"
-                    class="close-button board-task-dialog-close-button"
-                  >
-                    <img src="../assets/img/close-button.svg" alt="" />
-                  </button>
-                </div>
-                <h1>Kochwelt Page & Recipe Recommender</h1>
-                <!-- Einfügen: ${task.title} -->
-                <span class="board-task-dialog-description fs20px"
-                  >Build start page with recipe recommendation.</span
-                >
-                <!-- Einfügen: ${task.description} -->
-                <div class="gap-25px">
-                  <span class="fs20px color-grey">Due date:</span>
-                  <span class="fs20px">10/05/2023</span
-                  ><!-- Einfügen: ${task.dueDate} -->
-                </div>
-                <div class="gap-25px">
-                  <span class="fs20px color-grey">Priority:</span>
-                  <div class="board-task-dialog-priority fs20px">
-                    Medium
-                    <!-- Einfügen  ${task.prio}-->
-                    <img
-                      src="../assets/img/prio-medium.svg"
-                      alt=""
-                    /><!-- Einfügen: <img src="../assets/img/prio-${task.prio}.svg" alt=""> -->
-                  </div>
-                </div>
-                <div class="board-task-dialog-assigned-to gap-8px">
-                  <span class="color-grey fs20px">Assigned To:</span>
-                  <!-- Hier render functions für contacts nutzen -->
-                  <div class="board-task-dialog-assigned-to-user">
-                    <img src="../assets/img/temp-contact-dummy.svg" alt="" />
-                    <span class="fs19px">Emmanuel Mauer</span>
-                  </div>
-                  <div class="board-task-dialog-assigned-to-user">
-                    <img src="../assets/img/temp-contact-dummy.svg" alt="" />
-                    <span class="fs19px">Emmanuel Mauer</span>
-                  </div>
-                  <div class="board-task-dialog-assigned-to-user">
-                    <img src="../assets/img/temp-contact-dummy.svg" alt="" />
-                    <span class="fs19px">Emmanuel Mauer</span>
-                  </div>
-                </div>
-                <div class="board-task-dialog-subtasks gap-8px">
-                  <span class="fs20px color-grey">Subtasks</span>
-                  <div class="board-task-dialog-subtasks-list">
-                    <!-- Hier render function für subtasks nutzen -->
-                    <!-- img muss anklickbar sein und subtasks auf done true oder false setzen -->
-                    <div class="board-task-dialog-subtasks-list-element">
-                      <img
-                        src="../assets/img/check-button-checked.svg"
-                        alt=""
-                      />
-                      <span>Implement Recipe Recommendation</span>
-                    </div>
-                    <div class="board-task-dialog-subtasks-list-element">
-                      <img
-                        src="../assets/img/check-button-unchecked.svg"
-                        alt=""
-                      />
-                      <span>Start Page Layout</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="board-task-dialog-footer">
-                  <button class="gap-8px border-right">
-                    <img src="../assets/img/delete.svg" alt="">
-                    Delete
-                  </button>
-                  <button class="gap-8px">
-                    <img src="../assets/img/edit.svg" alt="">
-                    Edit
-                  </button>
-                </div>
-              </div>
-            </div>
+          <div id="taskDetailDialogContainer" class="d-none">
+            
           </div>
         </main>
       </div>
